--- a/src/app/huongdan/huongdan.component.html
+++ b/src/app/huongdan/huongdan.component.html
@@ -3,18 +3,10 @@
         <h1>Hướng dẫn</h1>
     </div>
     <div class="rule">
-        <h1>Màn hình hướng dẫn hoàn vé video</h1>
+        <h3>Màn hình hướng dẫn đặt vé video</h3>
         <div class="video">
-            <video width="640" height="360" controls>
-                <source src="/assets/images/video hướng dẫn hoàn vé.webm" >
-            </video>
-        </div>
-    </div>
-    <div class="rule">
-        <h1>Màn hình hướng dẫn đặt vé video</h1>
-        <div class="video">
-            <video width="640" height="360" controls>
-                <source src="/assets/images/video hướng dẫn đặt vé.mp4" type="video/mp4">
+            <video width="650" height="350" controls>
+                <source src="/assets/images/hướng dẫn đặt vé.mp4" type="video/mp4">
             </video>
         </div>
     </div>
