--- a/src/app/search-bar/search-bar.component.html
+++ b/src/app/search-bar/search-bar.component.html
@@ -1,14 +1,18 @@
 <div id="searchBar">
   <select name="GaDi" id="" [(ngModel)]="gaDi">
+    <option>Ga đi</option>
     <option *ngFor="let ga of DanhSachGa" value="{{ga.idGaTau}}">{{ga.tengatau}}</option>
   </select>
   <select name="GaDen" id="" [(ngModel)]="gaDen" (change)="LayNgayKhoiHanh()">
+    <option>Ga đến</option>
     <option *ngFor="let ga of DanhSachGa" value="{{ga.idGaTau}}">{{ga.tengatau}}</option>
   </select>
   <select name="NgayDi" id="" [(ngModel)]="NgayDi" (change)="LayNgayDen()">
+    <option>Thời gian đi</option>
     <option *ngFor="let ngay of DanhSachNgayDi" value="{{ngay.Column1}}">{{ngay.Column1}}</option>
   </select>
   <select name="NgayDen" id="" [(ngModel)]="NgayDen" (change)="LayLichTrinh()">
+    <option>Thời gian đến</option>
     <option *ngFor="let ngay of DanhSachNgayDen" value="{{ngay.Column1}}">{{ngay.Column1}}</option>
   </select>
   <button (click)="TimVe()" >Tìm kiếm</button>
